@@ -97,7 +97,7 @@ public abstract class ModuleBody extends Procedure0
       {
 	CallContext ctx = CallContext.getInstance();
 	ClassMemberLocation.defineAll(this,  null,
-				      Interpreter.getInterpreter(),
+				      Language.getDefaultLanguage(),
 				      ctx.getEnvironment());
 	if (getMainPrintValues())
 	  {
